Using ListIterator here to reduce the time complexity from O(n^2) to O(n) in case of linked list